src/test/deca/context/valid/others/print_advanced.deca
// Description:
//    print de plusieurs variables de types differents
//
// Resultats:
//    
// 
// Historique:
//    cree le 07/01/2025

{
    print();
    println(3, 3.0, "voiture");
}
