src/test/deca/context/invalid/param_void.deca
// Description:
//    Selection dans main protected
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class A{
    void p(void a) {}
}
{
    A a;
    

}